@@ -5,6 +5,7 @@
 ### Added
 - Extend the current single recipe post type to display additional fields.
 - Added placeholder image for recipes.
+- Added support for the cover block on the Edit My Account page.
 
 ### Fixed
 - Added in a statement to to check a video exists before outputting the video play button.
